# AI-Assisted-Distributed-Log-Monitoring-System

Agent-sdk_v1/agent/: pyproject.toml
Agent-sdk_v1/agent/agent_sdk/: agent.py  database.py  logging_capture.py  network.py  sender.py
Agent-sdk_v1/agent/agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Agent-sdk_v1/agent/agent_sdk/integrations/: flask.py
Agent-sdk_v1/client-website/: app.py  requirements.txt
Agent-sdk_v1/client-website/templates/: base.html  cart.html  checkout.html  error.html  home.html  index.html  product.html
Agent-sdk_v1/our-site/: requirements.txt
Agent-sdk_v1/our-site/app/: config.py  database.py  logs.csv  main.py  models.py  schemas.py
Agent-sdk_v1/our-site/app/routes/: collect.py
Agent-sdk_v1/our-site/app/services/: normalizer.py  validator.py
Agent-sdk_v2/: client_app.py  test_server.py
Agent-sdk_v2/agent_v2/: pyproject.toml  readme.md
Agent-sdk_v2/agent_v2/agent_sdk/: agent.py  event_builder.py  logging_capture.py  performance.py  severity.py
Agent-sdk_v2/agent_v2/agent_sdk/integrations/: flask.py
Agent-sdk_v2/agent_v2/agent_telemetry_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Agent-sdk_v2/payload/: HTTP_EXCEPTION.json  db_error.json  exception.json  http_error.json  payload.json  routing_error.json
frontend/src/pages/: Signup.tsx
